# huge-c

./: CMakeLists.txt
include/: huge.h
src/: huge.c  internal.h  misc.c
src/test/: main.c
